# skillcheck

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: architecture.md  data-definitions.md  install-and-usage.md  prd.md  privacy.md  roadmap.md
docs/releases/: v0.1.0.md
docs/superpowers/plans/: 2026-04-21-mvp-vertical-slice.md
src/skill_health/: __init__.py  aggregate.py  cli.py  config.py  dashboard.py  demo.py  doctor.py  features.py  inventory.py  scoring.py  storage.py  summary.py  templates.py
src/skill_health.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/skill_health/importers/: codex.py
tests/: test_aggregate.py  test_cli.py  test_dashboard.py  test_demo.py  test_doctor.py  test_features.py  test_import_codex.py  test_inventory.py  test_packaging.py  test_scoring.py  test_storage.py  test_summary.py
